deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bump-api
  labels:
    app.kubernetes.io/instance: bump-api
    app.kubernetes.io/tier: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bump-api
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 7070
      name: http
