deployment/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bump-api
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    ingress.kubernetes.io/send-timeout: "3600"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
spec:
  rules:
    - host: $(HOST)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bump-api
                port: 
                  number: 7070
